# GP1_HardwareRasterizer

./: .gitignore  CMakeLists.txt  build-x64-deb.sh  update-shaders.sh
project/: CMakeLists.txt  CMakeLists.txt.old
project/libs/dxvk/lib/: libdxvk_d3d10core.so.0  libdxvk_d3d10core.so.0.20701  libdxvk_d3d8.so.0  libdxvk_d3d8.so.0.20701  libdxvk_d3d9.so.0  libdxvk_d3d9.so.0.20701  libdxvk_dxgi.so.0.20701
project/libs/dxvk/lib/pkgconfig/: dxvk-d3d10core.pc  dxvk-d3d11.pc  dxvk-d3d8.pc  dxvk-d3d9.pc  dxvk-dxgi.pc
project/resources/: Opaque.fx  PartialCoverage.fx  PosCol3D.fx  PosUV3D.fx  Test.fx
project/src/: Camera.cpp  Camera.h  ColorRGB.cpp  ColorRGB.h  Effect.cpp  Effect.h  Error.h  MathHelpers.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Structs.cpp  Structs.h  Texture.cpp  Texture.h  Timer.h  Utils.h  Vertex.h  main.cpp
